build/apps/kube-prometheus-stack/overlays/infra/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack
  labels:
    app.kubernetes.io/name: kube-prometheus-stack
  annotations:
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    kubernetes.io/ingress.class: traefik-external
    #argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    #argocd.argoproj.io/sync-wave: "4"

spec:
  entryPoints:
    - web #websecure
  routes:

    # - kind: Rule
    #   match: Host(`prometheus.anotherlife.pl`)
    #   services:
    #     - kind: Service
    #       name: prometheus-operated
    #       port: 9090 # 9090 http-web
    #   middlewares:
    #     - name: headers #traefik-dashboard-auth  #chain-traefik-dashboard
    #       namespace: traefik

    # - kind: Rule
    #   match: Host(`grafana.anotherlife.pl`)
    #   services:
    #     - kind: Service
    #       name: kube-prometheus-stack-grafana
    #       port: http-web # 80
    #   middlewares:
    #     - name: headers #traefik-dashboard-auth  #chain-traefik-dashboard
    #       namespace: traefik

    - kind: Rule
      match: Host(`alertmanager.anotherlife.pl`)
      services:
        - kind: Service
          name: alertmanager-operated
          port: 9093 #http-web # 9093
      middlewares:
        - name: headers #traefik-dashboard-auth  #chain-traefik-dashboard
          namespace: traefik

  tls:
    #secretName: letsencrypt-production
    options:
      name: tls-ver13
      namespace: traefik
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
